--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "complete-vuejs-3",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "license": "MIT",
   "dependencies": {
     "@vue/compiler-sfc": "3.0.7",
